@@ -5,6 +5,9 @@ Changes for Crate Admin Interface
 Unreleased
 ==========
 
+- Changed the license information (ident) to be taken from the `sys.cluster.licence`
+  attribute instead of the `license.ident` setting which is `@deprecated`.
+
 - Fixed an issue that caused the cluster and node checks to not be refreshed
   when clicking on the ``refresh`` icon.
 
